# jdcloud-sdk-rust-signer

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md  codecov.yml
examples/: client.rs  sign.rs
src/: client.rs  credential.rs  error.rs  jdcloud_signer.rs  lib.rs  signer.rs
tests/: integration_test.rs
