[package]
name = "jdcloud_signer"
description = "jdcloud.com API signer"
version = "0.1.0"
authors = ["LI Daobing <lidaobing@jd.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "jdcloud_signer"

[dependencies]
http = "0.2.6"
rust-crypto = "^0.2"
chrono = "0.4"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
reqwest = { version = "0.11.10", features= ["blocking"], optional = true }
percent-encoding={ version = "2.1.0" }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["reqwest"]

[badges]
travis-ci = { repository = "jdcloud-api/jdcloud-sdk-rust-signer", branch = "master" }
